@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.4 2004/10/21 15:24:42 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/NewStuff,v 1.5 2004/11/04 10:42:11 ph10 Exp $
 
 New Features in Exim
 --------------------
@@ -27,6 +27,11 @@ Version 4.44
     this is just like $address_data. The value does not persist after the end
     of the current ACL statement. If you want to preserve it, you can use one
     of the ACL variables.
+
+ 5. The redirect router has two new options: forbid_sieve_filter and
+    forbid_exim_filter. When filtering is enabled by allow_filter, these
+    options control which type(s) of filtering are permitted. By default, both
+    Exim and Sieve filters are allowed.
 
 
 Version 4.43
